vllm/vllm.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-service
  labels:
    app: vllm
spec:
  ports:
    - name: vllm-port
      port: 8000
      targetPort: 8000
  clusterIP: None
  selector:
    app: vllm

  
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vllm
spec:
  selector:
    matchLabels:
      app: vllm
  serviceName: "vllm-service"
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: vllm
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: vllm
          image: vllm/vllm-openai:latest
          imagePullPolicy: Always
          resources:
            limits:
              nvidia.com/gpu: 1
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: storage
              mountPath: /root/.cache/huggingface
          args:
            ["--model", "mesolitica/mallam-1.1b-20k-instructions", "--dtype", "float16", "--max-model-len", "16384", "--served-model-name", "mistral"]

  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: gp2
        resources:
          requests:
            storage: 100Gi
